--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "vietnguyen-portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  }
+	"name": "vietnguyen-portfolio",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@mdx-js/loader": "^1.6.22",
+		"@mdx-js/react": "^1.6.22",
+		"@next/mdx": "^10.2.3",
+		"next": "10.2.3",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
+	"devDependencies": {
+		"sass": "^1.34.0"
+	}
 }
