--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.3",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@types/mdx": "^2.0.5",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
